@@ -1,14 +1,23 @@
 -ea
 -server
-
+-Xms1024m
+-Xmx3072m
+-Xss1m
+-XX:CMSInitiatingOccupancyFraction=60
+-XX:CompileThreshold=10000
+-XX:LargePageSizeInBytes=256m
+-XX:MaxMetaspaceSize=1G
+-XX:MetaspaceSize=512M
+-XX:ParallelGCThreads=6
+-XX:ReservedCodeCacheSize=1G
+-XX:SoftRefLRUPolicyMSPerMB=50
+-Xverify:none
 -Dawt.useSystemAAFontSettings=lcd
 -Deditor.distraction.free.mode=true
 -Dfile.encoding=UTF-8
 -Dhidpi=true
 -Djava.net.preferIPv4Stack=true
 -Dsun.io.useCanonCaches=false
-
--XX:+AggressiveOpts
 -XX:+CMSClassUnloadingEnabled
 -XX:+CMSClassUnloadingEnabled
 -XX:+CMSParallelRemarkEnabled
@@ -29,18 +38,7 @@
 -XX:+UseSplitVerifier
 -XX:+UseStringCache
 -XX:-OmitStackTraceInFastThrow
--XX:CMSInitiatingOccupancyFraction=60
--XX:CompileThreshold=10000
--XX:LargePageSizeInBytes=256m
--XX:MaxMetaspaceSize=1G
--XX:MetaspaceSize=512m
--XX:ParallelGCThreads=8
--XX:ReservedCodeCacheSize=2G
--XX:SoftRefLRUPolicyMSPerMB=50
-
--Xms1G
--Xss2m
--Xverify:none
--Xmx4096m
 -Dide.no.platform.update=true
-
+-Djdk.http.auth.tunneling.disabledSchemes=""
+-XX:MaxJavaStackTraceDepth=-1
+-agentlib:yjpagent=probe_disable=*,disablealloc,disabletracing,onlylocal,disableexceptiontelemetry,delay=10000,sessionname=IntelliJIdea2018.2
